# DownloadVimeo

./: .gitmodules  ReadMe.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows.yaml  codeql.yml  release-all.yaml
vimeo_download/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  main.cpp
vimeo_download/src/: CMakeLists.txt  CreateDir.cpp  Requests.cpp  Vimeo.cpp  Vimeo.hpp
vimeo_download/src/json/: CMakeLists.txt  Json.cpp  Json.hpp
vimeo_download/src/message/: Messages.hpp
vimeo_download/src/model/: ParsedArg.hpp
vimeo_download/src/network/: CMakeLists.txt  CurlStuff.hpp  RequestMetadata.cpp  RequestMetadata.hpp  RequestSegment.cpp  RequestSegment.hpp  Requests.cpp  Requests.hpp  Requsts.hpp  SegmentVideo.cpp  SegmentVideo.hpp
vimeo_download/src/segment/: AudioSegment.cpp  AudioSegment.hpp  CMakeLists.txt  SegmentBase.hpp  VideoSegment.cpp  VideoSegment.hpp
vimeo_download/src/util/: CMakeLists.txt  Colors.hpp  CommandBuilder.cpp  CommandBuilder.hpp  CreateDir.cpp  CreateDir.hpp  Utils.cpp  Utils.hpp
